@@ -20,10 +20,10 @@ describe SimpleDeploy do
     logger.info 'a message'
   end
 
-  it "accept puts with msg and pass it to info" do
+  it "accept puts with msg and pass it to debug" do
     logger_mock = mock 'logger'
     Logger.should_receive(:new).with(STDOUT).and_return logger_mock
-    logger_mock.should_receive(:info).with 'a message'
+    logger_mock.should_receive(:debug).with 'a message'
     logger_mock.should_receive(:datetime_format=).with '%Y-%m-%dT%H:%M:%S%z'
     logger_mock.should_receive(:formatter=)
     logger_mock.should_receive(:level=).with 1
